--- a/1. drop-constants/drop-constants.ipynb
+++ b/1. drop-constants/drop-constants.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../dataset.csv\")"
+    "df = pd.read_csv(\"dataset.csv\")"
    ]
   },
   {
