--- a/3. mutual-information/mutual-info-in-regression.ipynb
+++ b/3. mutual-information/mutual-info-in-regression.ipynb
@@ -922,7 +922,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# DONE"
+   ]
   }
  ],
  "metadata": {
